src/objects/CventEvents__CustomField__c.object
<CustomObject>
    <description>Stores information about Cvent Event/Contact custom fields and their mapping on SF data model.</description>
    <fields>
        <fullName>CventEvents__AllowedValues__c</fullName>
        <description>Stores values which are allowed on the Cvent side.</description>
        <inlineHelpText>Stores values which are allowed on the Cvent side.</inlineHelpText>
        <label>Allowed Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__ErrorMessage__c</fullName>
        <description>Stores the error message of the metadata sync.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__FieldApiName__c</fullName>
        <description>Stores the SF field API name.</description>
        <inlineHelpText>Stores the SF object API name.</inlineHelpText>
        <label>Field API Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__FieldLabel__c</fullName>
        <description>Stores the SF field label.</description>
        <inlineHelpText>Stores the SF field label.</inlineHelpText>
        <label>Field Label</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__FieldStub__c</fullName>
        <description>Stores the Cvent field stub.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores the Cvent field stub.</inlineHelpText>
        <label>Field Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CventEvents__HasError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents whether the error is occurred during metadata sync.</description>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__ObjectApiName__c</fullName>
        <description>Stores the SF object API name.</description>
        <inlineHelpText>Stores the SF object API name.</inlineHelpText>
        <label>Object API Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Type__c</fullName>
        <description>Stores the Cvent field type.</description>
        <inlineHelpText>Stores the Cvent field type.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OpenEndedText</fullName>
                    <default>true</default>
                    <label>OpenEndedText</label>
                </value>
                <value>
                    <fullName>AutoIncrement</fullName>
                </value>
                <value>
                    <fullName>SingleChoice</fullName>
                </value>
                <value>
                    <fullName>MultiChoice</fullName>
                </value>
                <value>
                    <fullName>OpenEndedDateTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cvent Custom Field</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__FieldLabel__c</columns>
        <columns>CventEvents__FieldApiName__c</columns>
        <columns>CventEvents__ObjectApiName__c</columns>
        <columns>CventEvents__Type__c</columns>
        <columns>CventEvents__HasError__c</columns>
        <columns>CventEvents__ErrorMessage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{00000000}</displayFormat>
        <label>Custom Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>